<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">凯帝狮</string>
    <string name="action_settings">Settings</string>

    <string-array name="gameitem_mickey"></string-array>
    <string-array name="gameitem_highmark"></string-array>
    <string-array name="gameitem_small"></string-array>
    <string-array name="gameplayer_mickey"></string-array>
    <string-array name="gamesetting">
        <item>游戏设定</item>
        <item>切换玩家顺序</item>
        <item>让分设置</item>
        <item>退镖</item>
        <item>上一个游戏统计界面</item>
        <item>立即结束游戏</item>
        <item>游戏规则</item>
    </string-array>

    <string name="Choose_highscore">高分赛</string>
    <string name="Choose_game01">01系列</string>
    <string name="Choose_mickey">米老鼠</string>
    <string name="Ask3">决胜局！</string>
    <string name="restart">继续游戏？</string>
    <string name="Ask1">恭喜！Player1已获胜！还要继续游戏？</string>
    <string name="Ask2">恭喜！Player2已获胜！还要继续游戏？</string>
    <string name="Ask11">恭喜！Player1已获胜！</string>
    <string name="Ask22">恭喜！Player2已获胜！</string>
    <string name="RoundSetting">游戏回合设置</string>
    <string name="RoundSetting_highscore">高分赛：</string>
    <string name="RoundSetting_game01">01系列：</string>
    <string name="RoundSetting_mickey">米老鼠：</string>
    <string name="GameMickey">标准米老鼠</string>
    <string name="set">设置</string>
    <string name="option">游戏设定</string>
    <string name="rules">游戏规则</string>
    <string name="direction">上下左右</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="reducescore">让分</string>
    <string name="change">切换</string>
    <string name="bluetoothopen">请确保蓝牙飞镖机已打开</string>
    <string name="gamename">301 GAME</string>
    <string name="gameexplain">每轮投掷三支飞镖，分数累计，目标拿到最高分数！</string>
    <string name="modelitem">模式选项</string>
    <string name="startitem">开镖选项</string>
    <string name="enditem">结镖选项</string>
    <string name="doublebull">双牛</string>
    <string name="endremind">结镖提示</string>
    <string name="normal">普通</string>
    <string name="any">任意</string>
    <string name="and50">50/50</string>
    <string name="open">开</string>
    <string name="Player1">玩家1</string>
    <string name="Player2">玩家2</string>
    <string name="Player3">玩家3</string>
    <string name="Player4">玩家4</string>
    <string name="Player5">Player5</string>
    <string name="Player6">Player6</string>
    <string name="Player7">Player7</string>
    <string name="Player8">Player8</string>
    <string name="online">ON LINE</string>
    <string name="offline">OFF LINE</string>
    <string name="v2">2v2</string>
    <string name="startgame">开始游戏</string>
    <string name="number1">第一名</string>
    <string name="number2">第二名</string>
    <string name="number3">第三名</string>
    <string name="number4">第四名</string>
    <string name="singlestr">SINGLE</string>
    <string name="doublestr">DOUBLE</string>
    <string name="triplestr">TRIPLE</string>
    <string name="doublebullstr">D-BULL</string>
    <string name="singlebullstr">S-BULL</string>
    <string name="integral">积分:</string>
    <string name="level">等级:</string>
    <string name="integralstr">积分</string>
    <string name="levelstr">等级</string>
    <string name="dartsstr">投掷镖数</string>
    <string name="pprstr">PPR</string>
    <string name="ppdstr">PPD</string>
    <string name="mprstr">MPR</string>
    <string name="totalstr">总分</string>
    <string name="roundstr">回合</string>
    <string name="plasethrowdart">   请投镖！</string>
    <string name="plasegetdart">请拔镖！</string>
    <string name="gameover">游戏结束！</string>
    <string name="promptdarts">满足结镖要求，已结镖!</string>
    <string name="deviceexception">很抱歉，您的设备存在异常，请重启设备！</string>
    <string name="gameset">已开始游戏,不能再设定!</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="title_activity_game_high_score">GameHighScoreActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_big_score">BigScoreActivity</string>

</resources>