<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/kuang"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/RoundSetting"
        android:textColor="@android:color/white"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="@string/RoundSetting_highscore"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/tv_highscore"
                android:max="18"
                android:maxHeight="3dp"
                android:minHeight="3dp"/>

            <TextView
                android:id="@+id/bar1_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:text="8/20"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="@string/RoundSetting_game01"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/tv_01"
                android:max="20"
                android:maxHeight="3dp"
                android:minHeight="3dp"/>

            <TextView
                android:id="@+id/bar2_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="10/20"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_mickey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="@string/RoundSetting_mickey"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/tv_mickey"
                android:max="20"
                android:maxHeight="3dp"
                android:minHeight="3dp"/>

            <TextView
                android:id="@+id/bar3_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="15/20"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>