<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_02"
    android:orientation="vertical" >

    <!-- 冰封+左中右+底部 -->


    <!-- 冰封 -->

    <LinearLayout
        android:id="@+id/LinearLayout_bust"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/frozen"
        android:orientation="vertical"
        android:visibility="gone" >
    </LinearLayout>

    <!-- 位于bottom布局上方 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/LinearLayout_bottom"
        android:layout_weight="5" >

        <!-- 01系列左、中、右三部分 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- 01系列左边部分 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >

                <!-- PPD -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/game_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="PPD:"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/game_ppd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- 回合列表listview -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ListView
                        android:id="@+id/listView_game_round"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_background"
                        android:divider="@null"
                        android:focusable="false"
                        android:focusableInTouchMode="false" >
                    </ListView>
                </LinearLayout>
            </LinearLayout>

            <!-- 01系列中间部分 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical" >

                <!-- 牛眼、开镖、结镖设置 -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/openEndicon1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone" >
                    </ImageView>

                    <ImageView
                        android:id="@+id/openEndicon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone" >
                    </ImageView>

                    <ImageView
                        android:id="@+id/openEndicon3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone" >
                    </ImageView>
                </LinearLayout>

                <com.hopen.darts.view.GameNumberView
                    android:id="@+id/gameNumberView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:visibility="visible" >
                </com.hopen.darts.view.GameNumberView>
            </LinearLayout>

            <!-- 01系列右边部分 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:orientation="vertical" >

                <!-- 蓝牙指示灯和设置按钮 -->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" >

                    <!-- 用来获取玩家1、2、3、4字符串国际化 -->

                    <TextView
                        android:id="@+id/first_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/Player1"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/second_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/Player2"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/third_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/Player3"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/fourth_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/Player4"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/on_offline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/online" />

                    <ImageButton
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/on_offline"
                        android:background="@drawable/setting" />
                </RelativeLayout>

                <!-- 右边标题+三支飞镖 -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <!-- 右边标题 -->

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" >

                        <!-- 3支飞镖 -->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/darts_line_bg"
                            android:gravity="center"
                            android:orientation="vertical" >

                            <ImageView
                                android:id="@+id/rotateView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:src="@drawable/darts1" />

                            <ImageView
                                android:id="@+id/rotateView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:src="@drawable/darts1" />

                            <ImageView
                                android:id="@+id/rotateView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:src="@drawable/darts1" />
                        </LinearLayout>

                        <!-- 射镖后SINGLE 20的指示 -->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/textView_first"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/text_bg"
                                android:gravity="center"
                                android:singleLine="true"
                                android:text="123"
                                android:textColor="@android:color/white"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textView_second"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/text_bg"
                                android:gravity="center"
                                android:singleLine="true"
                                android:text="123"
                                android:textColor="@android:color/white"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textView_third"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/text_bg"
                                android:gravity="center"
                                android:singleLine="true"
                                android:text="123"
                                android:textColor="@android:color/white"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- 左、中、右三部分 -->
    </LinearLayout>
    <!-- bottom以上的布局 -->


    <!-- 01系列底部布局 （四个卡片布局） -->

    <LinearLayout
        android:id="@+id/LinearLayout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/include_player" />
    </LinearLayout>

</LinearLayout>